# YearEnd2018_Group3

./: .gitignore  CMakeLists.txt
Classes/common/: Definition.h  DefinitionUI.h
Classes/common/appdelegate/: AppDelegate.cpp
Classes/common/definitionlevels/: DefinitionLevel1.h  DefinitionLevel3.h  DefinitionLevel4.h  DefinitionLevel5.h  DefinitionLevel7.h  DefinitionLevel8.h  DefinitionLevel9.h
Classes/common/definitionlevels/level5/: DefinitionLevel5.h
Classes/common/definitionpaths/verticalline/: DefinitionVerticalLine.h
Classes/models/core/: CoreModel.cpp  CoreModel.h
Classes/models/levels/core/corelevel/: CoreLevel.cpp  CoreLevel.h
Classes/models/levels/core/corelevelframe/: CoreLevelFrame.cpp  CoreLevelFrame.h
Classes/models/levels/level1/: Level1.cpp  Level1.h
Classes/models/levels/level1/frames/: Level1Frame1.cpp  Level1Frame1.h
Classes/models/levels/level3/: Level3.cpp  Level3.h
Classes/models/levels/level3/frames/frame1/: Level3Frame1.cpp  Level3Frame1.h
Classes/models/levels/level3/frames/frame2/: Level3Frame2.cpp  Level3Frame2.h
Classes/models/levels/level3/frames/frame3/: Level3Frame3.cpp  Level3Frame3.h
Classes/models/levels/level3/frames/frame4/: Level3Frame4.cpp  Level3Frame4.h
Classes/models/levels/level4/: Level4.cpp  Level4.h
Classes/models/levels/level4/frames/frame1/: Level4Frame1.cpp  Level4Frame1.h
Classes/models/levels/level4/frames/frame2/: Level4Frame2.cpp  Level4Frame2.h
Classes/models/levels/level5/: Level5.cpp  Level5.h
Classes/models/levels/level5/frames/: Level5Frame1.cpp  Level5Frame1.h
Classes/models/levels/level7/: Level7.cpp  Level7.h
Classes/models/levels/level8/: Level8.cpp  Level8.h
Classes/models/levels/level9/: Level9.cpp  Level9.h
Classes/models/objects/obstacles/: RectagleBarrier.cpp  RectagleBarrier.h
Classes/models/objects/obstacles/level3/circle/: CircleObstacleModel.cpp  CircleObstacleModel.h
Classes/models/objects/obstacles/level3/circleline/: CircleLineModel.cpp  CircleLineModel.h
Classes/models/objects/obstacles/level3/coin/: CoinModel.cpp  CoinModel.h
Classes/models/objects/obstacles/level3/horizontalline/: HorizontalLine.cpp  HorizontalLine.h
Classes/models/objects/obstacles/level3/rectagle/: RectagleModel.cpp  RectagleModel.h  RectangleObstacleModel.cpp  RectangleObstacleModel.h
Classes/models/objects/obstacles/level3/rectagleline/: RectangleLine.cpp  RectangleLine.h
Classes/models/objects/obstacles/level3/triangular/: TriangularObstacleModel.cpp  TriangularObstacleModel.h
Classes/models/objects/obstacles/level3/triangularline/: TriangularLine.cpp  TriangularLine.h
Classes/models/objects/obstacles/level4/circleobstacle/: CircleLineObstacle.cpp  CircleLineObstacle.h
Classes/models/objects/obstacles/level4/lineobstacle/: LineObstacleModel.cpp  LineObstacleModel.h
Classes/models/objects/obstacles/level5/: LineFrame.cpp  LineFrame.h
Classes/models/objects/obstacles/level5/line/: LineFrame.cpp  LineFrame.h
Classes/models/objects/obstacles/level7/: Barrier.cpp  Barrier.h
Classes/models/objects/obstacles/level8/: Bar.cpp  Bar.h  Boom.cpp  Boom.h  Rock.cpp  Rock.h  Spike.cpp  Spike.h
Classes/models/objects/obstacles/level8/core/: CoreObstacle.cpp  CoreObstacle.h
Classes/models/objects/obstacles/level9/: Archer.cpp  Archer.h  Cannon.cpp  Cannon.h  Shooter.cpp  Shooter.h
Classes/models/objects/obstacles/level9/core/: CoreDestroyer.cpp  CoreDestroyer.h
Classes/models/objects/orther/: Enemy.cpp  Enemy.h
Classes/models/objects/orther/line/: Line.cpp  Line.h
Classes/models/objects/other/level7/: BarriersCreation.cpp  BarriersCreation.h
Classes/models/objects/other/level8/: ObstaclesCreation.cpp  ObstaclesCreation.h
Classes/models/objects/other/level9/: DestroyersCreation.cpp  DestroyersCreation.h
Classes/models/objects/other/level9/destroyer_moving_path/: DestroyersMovingPath.cpp  DestroyersMovingPath.h
Classes/models/objects/other/level9/destroying_weapons/: Arrow.cpp  Arrow.h  Bullet.cpp  Bullet.h  Missle.cpp  Missle.h
Classes/models/paths/circle/: CirclePath.cpp  CirclePath.h  CirclePathExtend.cpp  CirclePathExtend.h
Classes/models/paths/core/: CorePath.cpp  CorePath.h
Classes/models/paths/horizontalline/: HorizontalLinePath.cpp  HorizontalLinePath.h
Classes/models/paths/square/: SquarePath.cpp  SquarePath.h
Classes/models/paths/triangular/: TriangularPath.cpp  TriangularPath.h
Classes/models/paths/verticalline/: VerticalLinePath.cpp  VerticalLinePath.h
Classes/scenes/gameplay/: GamePlayScene.cpp  GamePlayScene.h
Classes/scenes/intro/: IntroEnd.cpp  IntroEnd.h  IntroStart.cpp  IntroStart.h
Classes/scenes/ui/gameover/: GameOver.cpp  GameOver.h
Classes/scenes/ui/menu/: LevelsSelectionScene.cpp  LevelsSelectionScene.h  MapLevel.cpp  MapLevel.h  MenuScene.cpp  MenuScene.h
Classes/scenes/ui/panels/gameover/: GameOverPanel.cpp  GameOverPanel.h
Classes/scenes/ui/panels/level_completion/: LevelCompletionPanel.cpp  LevelCompletionPanel.h
Classes/scenes/ui/splash/: SplashScreenScene.cpp  SplashScreenScene.h
Classes/utils/helper/: Helper.cpp  Helper.h
Classes/utils/levels/level1/: Level1Helper.cpp
Classes/utils/levels/level5/: Level5Helper.cpp  Level5Helper.h
Classes/utils/physics/: PhysicsShapeCache.cpp  PhysicsShapeCache.h
Resources/fonts/: rules.txt
Resources/sprites/gameplay/level3/circle/: circle.plist
Resources/sprites/gameplay/level5/line/: line_frame_0.json  line_frame_1.json  line_frame_10.json  line_frame_11.json  line_frame_12.json  line_frame_13.json  line_frame_14.json  line_frame_15.json  line_frame_16.json  line_frame_17.json  line_frame_2.json  line_frame_20.json  line_frame_21.json  line_frame_22.json  line_frame_3.json  line_frame_4.json  line_frame_5.json  line_frame_6.json  line_frame_7.json  line_frame_8.json  line_frame_9.json  line_frame_obstacles.json
Resources/sprites/gameplay/level7/: blue_barrier.plist  green_barrier.plist  red_barrier.plist  yellow_barrier.plist
proj.win32/: TheHopefulLetter.sln  TheHopefulLetter.vcxproj  TheHopefulLetter.vcxproj.filters
(+4 files in other folders)
